# stereo-spot

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  STREAMING-TESTING.md  nx.json  package-lock.json  package.json  project.json  streaming-implementation-client-capture.md  streaming-implementation-orchestration.md  streaming-implementation-plan.md  streaming-implementation-playback-hls.md
.cursor/rules/: docs-source-of-truth.mdc
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  RUNBOOKS.md  SHARED_TYPES.md  TESTING.md
docs/prompts/: analyze_analytics.md
scripts/: chunking_recovery.py  env_helpers.py  inference_build.py  inference_redeploy.py  pyproject.toml  stream_e2e.py  update_alb_certs.py  update_hf_token.py  update_ytdlp_cookies.py
scripts/stereo_spot_scripts/: __init__.py
